# EcoSim

./: .gitignore  CMakeLists.txt  README.md  run.bat
include/: AnimalConfig.h  Carnivore.h  Entity.h  Herbivore.h  Kinematics.h  Plant.h  World.h
src/: Entity.cpp  World.cpp  kinematics.h  main.cpp
tests/: test_animalconfig.cpp  test_entity.cpp  test_initial.cpp  test_kinematics.cpp  test_world.cpp
